# vue-compiler

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  codecov.yml  index.html  renovate.json  rust-toolchain  rustfmt.toml
benches/: Cargo.toml  bench.ts  my_benchmark.rs  package.json  pnpm-lock.yaml
benches/fixtures/: Attribute.vue  Counter.vue  ElasticHeader.vue  GithubCommit.vue  ModalComponent.vue  TodoApp.vue  TreeView.vue  TwoWayBinding.vue  UserInput.vue  VFor.vue  VIf.vue
benches/src/: bench_util.rs  compile_bench.rs
crates/cli/: Cargo.toml  test.vue
crates/cli/src/: ast_print.rs  cli.rs  lib.rs  main.rs  pretty_error.rs
crates/cli/tests/: App.vue
crates/compiler/: Cargo.toml  test.vue
crates/compiler/snapshots/: vue_template_compiler__core__parser__test__bind_dir-5.snap  vue_template_compiler__core__parser__test__custom_dir.snap  vue_template_compiler__core__parser__test__dir_parse_error-4.snap  vue_template_compiler__core__parser__test__dir_parse_error-6.snap  vue_template_compiler__core__parser__test__on_dir-3.snap  vue_template_compiler__core__parser__test__on_dir-4.snap  vue_template_compiler__core__parser__test__prop_dir-2.snap  vue_template_compiler__core__parser__test__prop_dir-3.snap  vue_template_compiler__core__parser__test__slot_dir-2.snap  vue_template_compiler__core__parser__test__slot_dir-4.snap  vue_template_compiler__core__parser__test__slot_dir-5.snap  vue_template_compiler__core__parser__test__slot_dir.snap  vue_template_compiler__core__tokenizer__test__raw_text-6.snap  vue_template_compiler__core__tokenizer__test__rc_data-4.snap  vue_template_compiler__core__tokenizer__test__rc_data.snap  vue_template_compiler__core__tokenizer__test__test-12.snap  vue_template_compiler__core__tokenizer__test__test-14.snap  vue_template_compiler__core__tokenizer__test__test-2.snap  vue_template_compiler__core__tokenizer__test__test-5.snap  vue_template_compiler__core__tokenizer__test__test-7.snap
crates/compiler/src/: codegen.rs  compiler.rs  error.rs  flags.rs  ir.rs  lib.rs  main.rs  parser.rs  scanner.rs  tokenizer.rs  transformer.rs  util.rs
crates/compiler/src/codegen/: code_writer.rs
crates/compiler/src/converter/: build_props.rs  cache_dir.rs  convert_element.rs  convert_slot_outlet.rs  mod.rs  v_bind.rs  v_for.rs  v_if.rs  v_model.rs  v_on.rs  v_slot.rs
crates/compiler/src/snapshots/: compiler__parser__test__bind_dir-2.snap  compiler__parser__test__bind_dir-3.snap  compiler__parser__test__bind_dir-4.snap  compiler__parser__test__bind_dir-5.snap  compiler__parser__test__bind_dir-6.snap  compiler__parser__test__bind_dir-7.snap  compiler__parser__test__bind_dir.snap  compiler__parser__test__custom_dir-2.snap  compiler__parser__test__custom_dir.snap  compiler__parser__test__dir_parse_error-2.snap  compiler__parser__test__dir_parse_error-3.snap  compiler__parser__test__dir_parse_error-4.snap  compiler__parser__test__dir_parse_error-5.snap  compiler__parser__test__dir_parse_error-6.snap  compiler__parser__test__dir_parse_error.snap  compiler__parser__test__on_dir-2.snap  compiler__parser__test__on_dir-3.snap  compiler__parser__test__on_dir-4.snap  compiler__parser__test__on_dir-5.snap  compiler__parser__test__on_dir.snap  compiler__parser__test__prop_dir-2.snap  compiler__parser__test__prop_dir-3.snap  compiler__parser__test__prop_dir-4.snap  compiler__parser__test__prop_dir.snap  compiler__parser__test__slot_dir-2.snap  compiler__parser__test__slot_dir-3.snap  compiler__parser__test__slot_dir-4.snap  compiler__parser__test__slot_dir-5.snap  compiler__parser__test__slot_dir.snap  compiler__tokenizer__test__raw_text-2.snap  compiler__tokenizer__test__raw_text-3.snap  compiler__tokenizer__test__raw_text-5.snap  compiler__tokenizer__test__raw_text-6.snap  compiler__tokenizer__test__raw_text.snap  compiler__tokenizer__test__rc_data-10.snap  compiler__tokenizer__test__rc_data-11.snap  compiler__tokenizer__test__rc_data-12.snap  compiler__tokenizer__test__rc_data-2.snap  compiler__tokenizer__test__rc_data-3.snap  compiler__tokenizer__test__rc_data-4.snap  (+23 more)
crates/compiler/src/transformer/: cache_handlers.rs  collect.rs  collect_entities.rs  hoist_static.rs  mark_patch_flag.rs  mark_slot_flag.rs  merge_text_call.rs  mod.rs  normalize_props.rs  optimize_text.rs  pass.rs  process_expression.rs  track_scopes.rs  transform_expression.rs
crates/compiler/src/util/: ast_print.rs  decode_html.rs  json.rs  named_chars.rs  rslint.rs  swc.rs  v_str.rs
crates/compiler/tests/: common.rs  integration_test.rs  tokenizer_test.rs
crates/compiler/tests/codegen_test/: mod.rs
crates/compiler/tests/common/: mod.rs
crates/compiler/tests/converter_test/: mod.rs
crates/compiler/tests/error_test/: mod.rs
crates/compiler/tests/parser_test/: dir.rs  mod.rs
crates/compiler/tests/scanner_test/: mod.rs
crates/compiler/tests/snapshots/: tokenizer_test__should_scan-10.snap  tokenizer_test__should_scan-11.snap  tokenizer_test__should_scan-12.snap  tokenizer_test__should_scan-13.snap  (+33 more)
crates/ref_transform/: Cargo.toml  build.rs
crates/ref_transform/src/: js_parser.rs  lib.rs  matcher.rs  meta_var.rs  node.rs  pattern.rs  rule.rs
crates/sfc/: Cargo.toml
crates/sfc/src/: lib.rs  parse_sfc.rs  rewrite_default.rs  script.rs
crates/sfc/src/script/: mod.rs  (+4 more)
crates/wasm/: Cargo.toml  index.html
crates/wasm/src/: lib.rs
napi/: Cargo.toml  README.md  index.d.ts  index.js  package.json  pnpm-lock.yaml  simple-test.js
napi/__test__/: index.spec.ts
napi/benchmark/: index.js
napi/benchmark/fixtures/: Attribute.vue  ElTable.vue
napi/benchmark/results/: reduce.json
napi/npm/darwin-arm64/: package.json
napi/npm/darwin-x64/: package.json
napi/npm/freebsd-x64/: package.json
napi/npm/linux-arm-gnueabihf/: README.md
napi/npm/linux-arm64-gnu/: README.md
napi/npm/linux-arm64-musl/: package.json
napi/npm/linux-x64-gnu/: package.json
napi/npm/linux-x64-musl/: package.json
napi/npm/win32-arm64-msvc/: package.json
napi/npm/win32-ia32-msvc/: README.md
napi/npm/win32-x64-msvc/: package.json
napi/src/: lib.rs
(+588 files in other folders)
