[package]
name = "benches"
version = "0.1.0"
authors = ["Herrington Darkholme <2883231+HerringtonDarkholme@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.10", features = ["macros"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "main"
path = "my_benchmark.rs"
harness = false
