[package]
name = "benches"
version = "0.1.0"
authors = ["Herrington Darkholme <2883231+HerringtonDarkholme@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.3"
compiler = { path = "../crates/compiler" }
glob = "0.3.0"

[dev-dependencies]

[[bench]]
name = "compile"
path = "src/compile_bench.rs"
harness = false
