[package]
name = "rust-vue-compiler"
version = "0.1.0"
authors = ["Herrington Darkholme <2883231+HerringtonDarkholme@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "2.9.1"
napi-derive = {version = "2.9.1", features = ["type-def"]}
compiler = { path = "../crates/compiler", package = "vue-compiler-core", default-features = false, features = [] }
dom = { path = "../crates/dom", package = "vue-compiler-dom"}

[target.'cfg(all(any(windows, unix), target_arch = "x86_64", not(target_env = "musl")))'.dependencies]
mimalloc = {version = "0.1"}

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
