[package]
name = "vue-compiler-cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
clap = "3.0.0-rc.4"
compiler = { path = "../compiler", package = "vue-compiler-core" }
dom = { path = "../dom", package = "vue-compiler-dom" }
path-clean = "0.1.0"
codespan-reporting = "0.11.1"
serde_yaml = "0.8.23"
