[package]
name = "vue-compiler-cli"
version = "0.1.0"
edition = "2018"
authors = ["Herrington Darkholme <2883231+HerringtonDarkholme@users.noreply.github.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = {version = "4.4.18", features = ["derive"]}
compiler = { path = "../compiler", package = "vue-compiler-core" }
sfc = { path = "../sfc", package = "vue-compiler-sfc" }
dom = { path = "../dom", package = "vue-compiler-dom" }
path-clean = "1.0.1"
codespan-reporting = "0.11.1"
serde_yaml = "0.9.30"
