[package]
name = "compiler"
version = "0.1.0"
authors = ["Herrington Darkholme <2883231+HerringtonDarkholme@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3"
json = "0.12.4"
rustc-hash = "1.1.0"
smallvec = "1.7.0" # use tinyvec
swc_ecma_parser = "0.73.0"
swc_ecma_ast = "0.54.0"
swc_ecma_visit = "0.40.0"
swc_common = "0.13.0"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
insta = "1.8.0"

[features]
default = ["serde", "smallvec/serde"]
