[package]
name = "vue-compiler-core"
version = "0.1.0"
authors = ["Herrington Darkholme <2883231+HerringtonDarkholme@users.noreply.github.com>"]
edition = "2018"
description = "Vue compiler in Rust's core component"
keywords = ["vue", "compiler", "frontend"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smallvec = "1.7.0"
bitflags = "1.3"
rustc-hash = "1.1.0"
serde = { version = "1.0", features = ["derive"], optional = true }
rslint_parser = "0.3.1"

[dev-dependencies]
insta = "1.8.0"
lazy_static = "1.4.0"

[features]
default = ["serde", "smallvec/serde"]
