[package]
name = "vue-compiler-core"
version = "0.1.0"
authors = ["Herrington Darkholme <2883231+HerringtonDarkholme@users.noreply.github.com>"]
edition = "2018"
description = "Vue compiler in Rust's core component"
keywords = ["vue", "compiler", "frontend"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smallvec = "1.12.0"
bitflags = { version = "2.4.2", features = ["serde"] }
rustc-hash = "1.1.0"
serde = { version = "1.0", features = ["derive"], optional = true }
rslint_parser = "0.3.1"
phf = { version = "0.11", features = ["macros"] }
lazy_static = "1.4.0"

[dev-dependencies]
insta = { version = "1.34.0", features = ["serde"] }

[features]
default = ["serde", "smallvec/serde"]
