[package]
name = "vue-ref-transform"
version = "0.1.0"
authors = ["Herrington Darkholme <2883231+HerringtonDarkholme@users.noreply.github.com>"]
edition = "2018"
description = "Vue ref transform"
keywords = ["vue", "compiler", "frontend"]
license = "MIT"
repository = "https://github.com/HerringtonDarkholme/vue-compiler"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast-grep-core = "0.1.15"
ast-grep-config = "0.1.15"
tree-sitter-typescript="0.20.1"
