[package]
name = "vue-compiler-sfc"
version = "0.1.0"
authors = ["Herrington Darkholme <2883231+HerringtonDarkholme@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smallvec = "1.7.0"
rustc-hash = "1.1.0"
compiler = { path = "../compiler", default-features = false, features = [], package = "vue-compiler-core" }
