[package]
name = "vue-compiler-wasm"
version = "0.1.0"
authors = ["Herrington Darkholme <2883231+HerringtonDarkholme@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.78"
wee_alloc = { version = "0.4.5" }

[profile.release]
opt-level = "s"
